ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 5: errors (plan.FIXED.codes) ------------------------------------- */
#define AK_OK                    0      /* success */
#define AK_ALREADY_INITIALIZED   1      /* success: ak_init called again with the same options */
#define AK_ERR_HOST              (-1)   /* the host reported through ak_fail */
#define AK_ERR_MALFORMED         (-2)   /* invalid wire */
#define AK_ERR_TRUNCATED         (-3)   /* the input ended inside a value */
#define AK_ERR_DEPTH             (-4)   /* the decode recursion limit */
#define AK_ERR_LIMIT             (-5)   /* a size limit */
#define AK_ERR_TRANSCODE         (-6)   /* the transcoder refused its input */
#define AK_ERR_CAPACITY          (-7)   /* a transcoder wrote past the capacity given */
#define AK_ERR_INVALID_STATE     (-8)   /* e.g. two concurrent recv on one call */
#define AK_ERR_PANIC             (-9)   /* a caught Rust panic */
#define AK_ERR_UNINITIALIZED     (-10)  /* ak_init was not called */
#define AK_ERR_ABI               (-11)  /* version or group-layout mismatch */
#define AK_DETAIL_NONE           0u
#define AK_DETAIL_ABI_MISMATCH   1u
#define AK_DETAIL_OPTS_DIFFER    2u
#define AK_DETAIL_NULL_ARG       3u
#define AK_ABI_VERSION 1u
/* ---- section 3: lifecycle flags (plan.lifecycle.flag_values) ------------------- */
#define AK_INIT_OWN_LOGGING    1u
#define AK_INIT_NO_PANIC_HOOK  2u
#define AK_INIT_NO_CRYPTO      4u
/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: the transcoder's growth callback; may move the buffer. */
typedef int32_t (*ak_grow_fn)(void *sink, int32_t want, uint8_t * *dst, int32_t *cap);
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 3: the host's log sink. */
typedef void (*ak_log_fn)(void *ctx, uint32_t level, const uint8_t *msg, size_t msg_len);
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Decision 11: one message position's configuration; all zero = its unknowns are discarded. */
struct ak_unk_opts {
  struct ak_unk_buf buf;
  ak_grow_fn grow;
};
typedef struct ak_unk_opts ak_unk_opts;
/* ak_init's out-parameter (ABI v1 section 3/5): a code and a detail. */
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
/* ak_init's options (ABI v1 section 3). */
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
/* README R5: boundary-call counts, counted in the CORE (zero unless the core is a counting build). */
struct AkCounters {
  uint64_t forward;
  uint64_t reverse;
  uint64_t transcode;
  uint64_t prefix_moves;
  uint64_t prefix_bytes;
  uint64_t grows;
};
typedef struct AkCounters AkCounters;
/* ABI v1 section 7.1: one pull record header, 24 bytes; the payload follows, padded to 8. */
struct ak_bdr_rec {
  uint32_t op;
  uint32_t slot;
  int64_t token;
  uint32_t n;
  uint32_t bytes;
};
typedef struct ak_bdr_rec ak_bdr_rec;
#define AK_STR_DIRECT ((const void *)(uintptr_t)1)  /* ABI v1 section 8: ak_str.data meaning 'a direct argument of the call'. */
#define AK_TOKEN_ROOT ((int64_t)-1)  /* a token naming the root object itself */
#define AK_BDR_APPLY 1u  /* pull record: the root group (last record) */
#define AK_BDR_ADD 2u  /* pull record: a batched run */
#define AK_BDR_NEW 3u  /* pull record: a non-leaf element begins (minted token) */
#define AK_BDR_APPLY_ELEM 4u  /* pull record: a non-leaf element's group */
#define AK_BDR_MIN_CHUNK 32792u  /* the smallest drain chunk that holds any record */
/* ---- the fixed entry points (plan.FIXED.functions) ----------------------------- */
/* lifecycle */
/* Once per process, before anything else (plan.lifecycle). */
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);
/* 1 once ak_init has returned successfully. */
int32_t ak_initialized(void);
/* A NUL-terminated build id. */
const char *ak_build_id(void);
/* Test hook: one line through the installed log bridge. */
int32_t ak_log_test(uint32_t level, const uint8_t *msg, size_t len);
/* Test hook: a panic inside the core. */
void ak_panic_test(void);
/* context */
uint32_t ak_abi_version(void);
ak_enc_ctx *ak_enc_ctx_new(void);
void ak_enc_ctx_free(ak_enc_ctx *ctx);
/* Clears the buffer and the sticky slot. */
void ak_enc_reset(ak_enc_ctx *ctx);
/* Borrow what the context has encoded, valid until the next reset; returns the status. */
int32_t ak_enc_take(ak_enc_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_dec_ctx_free(ak_dec_ctx *ctx);
/* error */
/* Sticky, first error wins; takes either context (ABI v1 section 5). */
void ak_fail(void *ctx, int32_t code, const uint8_t *msg, uint32_t msg_len);
int32_t ak_enc_err(const ak_enc_ctx *ctx);
int32_t ak_dec_err(const ak_dec_ctx *ctx);
void ak_dec_err_reset(ak_dec_ctx *ctx);
/* transcode */
/* UTF-8, validate and refuse. */
ak_transcode_fn ak_tc_utf8(void);
/* UTF-8, no validation. */
ak_transcode_fn ak_tc_utf8_trusted(void);
/* UTF-8, SIMD validator. */
ak_transcode_fn ak_tc_utf8_simd(void);
/* bytes: a copy. */
ak_transcode_fn ak_tc_bytes(void);
/* UTF-16 code units -> UTF-8. */
ak_transcode_fn ak_tc_utf16(void);
/* Latin-1 bytes -> UTF-8. */
ak_transcode_fn ak_tc_latin1(void);
/* counters */
void ak_enc_counters(const ak_enc_ctx *ctx, struct AkCounters *out);
/* Counting build: the HOST reports a reverse crossing the core cannot see. */
void ak_enc_count_reverse(ak_enc_ctx *ctx);
void ak_enc_counters_reset(ak_enc_ctx *ctx);
void ak_dec_counters(const ak_dec_ctx *ctx, struct AkCounters *out);
void ak_dec_counters_reset(ak_dec_ctx *ctx);
size_t ak_enc_site_moves(const ak_enc_ctx *ctx, uint32_t *out, size_t cap);
/* noop */
/* A crossing and nothing else. */
uint64_t ak_noop(uint64_t x);
/* An identical twin of ak_noop. */
uint64_t ak_noop2(uint64_t x);
/* ak_noop with the init guard. */
uint64_t ak_noop_guarded(uint64_t x);
/* One forward and one reverse crossing. */
uint64_t ak_noop_reverse(uint64_t (*f)(uint64_t), uint64_t x);
/* pull */
int32_t ak_bdr_reserve(ak_dec_ctx *ctx, size_t bytes);
size_t ak_bdr_footprint(const ak_dec_ctx *ctx);
intptr_t ak_bdr_drain(ak_dec_ctx *ctx, uint8_t *dst, size_t cap, size_t *cursor);
int32_t ak_bdr_ptr(ak_dec_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_bdr_reset(ak_dec_ctx *ctx);
/* Counting build: the host reports the forward crossings of a drain loop. */
void ak_bdr_count_forward(ak_dec_ctx *ctx, uint32_t n);
/* layout */
/* ABI v1 section 10: the core's own view of every group layout. */
size_t ak_layout_facts(uint32_t *out, size_t cap);
/* The transport settings ArmoniK pins. The stream and the connection window are separate settings on tonic/hyper, so both are here. Zero means "the stack's". */
struct ak_client_opts {
  uint32_t stream_window;  /* SETTINGS_INITIAL_WINDOW_SIZE per stream; 0 = default. ArmoniK: 4 MiB. */
  uint32_t connection_window;  /* The connection-level window, a SEPARATE setting; 0 = default. */
  int32_t adaptive_window;  /* 1 on, 0 off, -1 default (off). Overrides both windows when on. */
  uint32_t max_recv_message;  /* Largest message accepted, bytes; 0 = default. */
  uint32_t max_send_message;  /* Largest message sent, bytes; 0 = default. */
  int32_t tcp_nagle;  /* ArmoniK's tcp_nagle_algorithm: 1 Nagle on, 0 off, -1 default. ArmoniK ships it OFF. */
};
typedef struct ak_client_opts ak_client_opts;